--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -8,13 +8,11 @@ tags:
   -
 ---
 
-
-## 2023年尝试的新方向
+## 2023 年尝试的新方向
 
 #### 信仰
 
 申命记：不可忘记你的主。
-
 
 #### 家庭
 
@@ -30,9 +28,7 @@ tags:
 
 **维护家庭爱的氛围**，营造彼此相爱的氛围可能需要一个月，毁了它只需要几分钟。说话态度，口气，音调，都需注意。
 
-
 #### 工作和学习
-
 
 工作要对别人有益处。为客户创造价值，为社会创造价值。
 
@@ -40,14 +36,14 @@ tags:
 
 2. **解决集成的 Resilience 的问题**
 
-    博览代码，多阅读一些优秀的开源项目。只有多学习，才能解决 Resilience 的问题。
+   博览代码，多阅读一些优秀的开源项目。只有多学习，才能解决 Resilience 的问题。
 
 3. **Kubernetes**
 
-    工作重心转移，暂时应该用不到 K8s，但是善始善终，还是把它学完吧，并且通过 K8s 的两个考试。
+   工作重心转移，暂时应该用不到 K8s，但是善始善终，还是把它学完吧，并且通过 K8s 的两个考试。
 
-    - [CKA](https://www.cncf.io/certification/cka/)
-    - [CKAD](https://www.cncf.io/certification/ckad/)
+   - [CKA](https://www.cncf.io/certification/cka/)
+   - [CKAD](https://www.cncf.io/certification/ckad/)
 
 ---
 
@@ -55,50 +51,47 @@ tags:
 
 在对自己的观察中我发现了一个有趣的事：当生活的场景或地点发生变化时，稳定的行为模式会被打断，很难恢复，即使恢复也不完整。
 
-为了对抗家族遗传性的高血脂，我一直低脂低盐饮食，过年7天假期我允许自己短暂的放纵，但是假期结束后我却忘记了低脂饮食的习惯。本来我每天坚持跑步 5km，得了新冠后，浑身乏力，无法运动。一个月后身体彻底康复，身体变得懒惰，不再愿意跑步。
+为了对抗家族遗传性的高血脂，我一直低脂低盐饮食，过年 7 天假期我允许自己短暂的放纵，但是假期结束后我却忘记了低脂饮食的习惯。本来我每天坚持跑步 5km，得了新冠后，浑身乏力，无法运动。一个月后身体彻底康复，身体变得懒惰，不再愿意跑步。
 
 旅游，过年，出差，让生活充满了新意，但也打断了循规蹈矩的生活，每次打断我都把自己弄丢了。这个文档快速帮自己找回自己，找回那个我所喜爱的循规蹈矩的自己。
 
-
 #### 信仰习惯
 
-| 原则 | 打破原则的直接后果 (3-5年) | 打破原则的凄惨结局 (60岁)| 
-|:--|:--|:--|
-| 常常默想死亡 "假如只剩三年寿命，该做什么" | 沉迷物质享受和虚浮的事物  | 没有反省的人生不值得活 |
-| 写日记 |  |  |
-| 三选一。全家人一起早晨听圣经；晚上一起敬拜；晚上一起祷告。 |  | 全家偏离信仰 |
+| 原则                                                       | 打破原则的直接后果 (3-5 年) | 打破原则的凄惨结局 (60 岁) |
+| :--------------------------------------------------------- | :-------------------------- | :------------------------- |
+| 常常默想死亡 "假如只剩三年寿命，该做什么"                  | 沉迷物质享受和虚浮的事物    | 没有反省的人生不值得活     |
+| 写日记                                                     |                             |                            |
+| 三选一。全家人一起早晨听圣经；晚上一起敬拜；晚上一起祷告。 |                             | 全家偏离信仰               |
 
 #### 健康习惯
 
-| 原则 | 打破原则的直接后果 (3-5年) | 打破原则的凄惨结局 (60岁)| 
-|:--|:--|:--|
-| 能早起就早起，不能早起别勉强 |  |  |
-| 每天早晨喝一大杯水 | 肾结晶加重，变为结石  |
-| 打喷嚏时头后仰，保护颈椎。 | 颈椎病发作 |
-| 中午 12:00 之后不要喝咖啡 | 睡的很浅，凌晨4点就会醒。更严重的话，彻夜失眠 | 记忆力下降，无法编程 |
-| 左右手交替使用鼠标，一月一换 | 右侧手肘疼痛 |  |
-| 左右交替使用磨牙进食，一月一换 | 单侧磨牙磨损，疼痛 |  |
-| 不喝酒 | 前列腺不舒服 / 胃食管反流 | 老年后起夜增多，睡不好，折腾死自己 |
-| 站立开会 | 久坐导致前列腺肥大 | 老年后起夜增多，睡不好，折腾死自己 |
-| 工作45分钟，锻炼15分钟\* | 久坐导致前列腺肥大 | 老年后起夜增多，睡不好，折腾死自己 |
-| 不吃豆腐乳 | 拉屎不痛快 |  |
-| 吃饭慢嚼细咽 | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。 |  |
-| 拉屎不看手机 | 痔疮发作 / 颈椎病发作 |  |
-| 不吃香肠 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心 | 脑梗/心梗，成为家庭的累赘 |
-| 每天晚上跑步 5 km | 肥胖/脂肪肝 |脑梗/心梗，成为家庭的累赘  |
-| 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间 | 偏离信仰，下地狱 |
-|  |  |  |
-
+| 原则                                     | 打破原则的直接后果 (3-5 年)                                  | 打破原则的凄惨结局 (60 岁)         |
+| :--------------------------------------- | :----------------------------------------------------------- | :--------------------------------- |
+| 能早起就早起，不能早起别勉强             |                                                              |                                    |
+| 每天早晨喝一大杯水                       | 肾结晶加重，变为结石                                         |
+| 打喷嚏时头后仰，保护颈椎。               | 颈椎病发作                                                   |
+| 中午 12:00 之后不要喝咖啡                | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠              | 记忆力下降，无法编程               |
+| 左右手交替使用鼠标，一月一换             | 右侧手肘疼痛                                                 |                                    |
+| 左右交替使用磨牙进食，一月一换           | 单侧磨牙磨损，疼痛                                           |                                    |
+| 不喝酒                                   | 前列腺不舒服 / 胃食管反流                                    | 老年后起夜增多，睡不好，折腾死自己 |
+| 站立开会                                 | 久坐导致前列腺肥大                                           | 老年后起夜增多，睡不好，折腾死自己 |
+| 工作 45 分钟，锻炼 15 分钟\*             | 久坐导致前列腺肥大                                           | 老年后起夜增多，睡不好，折腾死自己 |
+| 不吃豆腐乳                               | 拉屎不痛快                                                   |                                    |
+| 吃饭慢嚼细咽                             | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。 |                                    |
+| 拉屎不看手机                             | 痔疮发作 / 颈椎病发作                                        |                                    |
+| 不吃香肠                                 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心                    | 脑梗/心梗，成为家庭的累赘          |
+| 每天晚上跑步 5 km                        | 肥胖/脂肪肝                                                  | 脑梗/心梗，成为家庭的累赘          |
+| 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间                                                 | 偏离信仰，下地狱                   |
+|                                          |                                                              |                                    |
 
 工作间隙锻炼方式有：
 
 - 俯卧撑
 - 引体向上
 - 卷腹
-- 提肛20个
+- 提肛 20 个
 - 收下巴锻炼颈椎
 - 臀桥
-
 
 #### 家庭习惯
 
@@ -112,19 +105,35 @@ tags:
 - 不要高估钱财的作用，它并不可靠。战争/屠杀/文革随时有可能发生，没有绝对安全。
 - 家中富足睡不安稳，不如穷乏却睡的香甜。
 
-
 #### 学习习惯
 
 - 下午四点没事的话，背单词，复习 Anki 中的卡片。
-- 
-
+-
 
 #### 教会习惯
 
 - 即使知道大部分人都是虎头蛇尾，即使自己是个悲观者，也要多鼓励，少挖苦。你如何鼓励自己的儿子，在教会里也要如此鼓励别人。
 - 人都是刺猬，爱彼此越深，伤害越深，不要因为伤害就对关系失望和退缩。
 
+## 推迟到 2024 年的一些事情
 
+Q1
+
+从雪盈迁移回 IBKR，彻底废弃雪盈账户。
+
+Q2
+
+Q3
+
+先换快过期的护照，再刷签证，节省时间和精力。
+
+### 2024 年 11 月 11 日可以申请换护照
+
+### 2024 年 12 月份给全家人刷签证
+
+- 日本 5 年签
+- 韩国 5 年签
+- 全家人的加拿大签证
 
 ## 历史回顾
 
