--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -40,10 +40,10 @@ tags:
 
 3. **Kubernetes**
 
-   工作重心转移，暂时应该用不到 K8s，但是善始善终，还是把它学完吧，并且通过 K8s 的两个考试。
+   目前的工作环境，暂时应该用不到 K8s，但是善始善终，还是把它学完吧，并且通过 K8s 的两个考试。
 
-   - [CKA](https://www.cncf.io/certification/cka/)
    - [CKAD](https://www.cncf.io/certification/ckad/)
+   - [CKA](https://www.cncf.io/certification/cka/)
 
 ---
 
@@ -70,7 +70,7 @@ tags:
 | 能早起就早起，不能早起别勉强             |                                                              |                                    |
 | 每天早晨喝一大杯水                       | 肾结晶加重，变为结石                                         |
 | 打喷嚏时头后仰，保护颈椎。               | 颈椎病发作                                                   |
-| 中午 12:00 之后不要喝咖啡                | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠              | 记忆力下降，无法编程               |
+| 中午 14:00 之后不要喝咖啡                | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠              | 记忆力下降，无法编程               |
 | 左右手交替使用鼠标，一月一换             | 右侧手肘疼痛                                                 |                                    |
 | 左右交替使用磨牙进食，一月一换           | 单侧磨牙磨损，疼痛                                           |                                    |
 | 不喝酒                                   | 前列腺不舒服 / 胃食管反流                                    | 老年后起夜增多，睡不好，折腾死自己 |
@@ -86,9 +86,10 @@ tags:
 
 工作间隙锻炼方式有：
 
-- 俯卧撑
+- 半跪俯卧撑
 - 引体向上
 - 卷腹
+- 无负重下蹲 squat
 - 提肛 20 个
 - 收下巴锻炼颈椎
 - 臀桥
@@ -119,7 +120,7 @@ tags:
 
 Q1
 
-从雪盈迁移回 IBKR，彻底废弃雪盈账户。
+从雪盈迁移回 IBKR，彻底废弃雪盈账户。 ✅
 
 Q2
 
@@ -137,6 +138,7 @@ Q3
 
 ## 历史回顾
 
+- [2023-2028 五年计划](/five-year-plans-2023.html)
 - [2022 计划](/2022-07-08-plan-for-the-Q3-and-Q4-of-2022.html)
 - [2020 计划](/plan-for-2020.html)
 - [2019 计划](/plan-for-2019.html)
