retrospect the plan for 2023

--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -20,19 +20,32 @@ tags:
 
 继续鼓励妻子每周和 Jaimie 用英文聊天，允许她犯错，允许她绕弯路，允许她按奇怪的方式学英语。她若不需要指点，我不要好为人师。
 
+> Nov 13, 2023:
+>
+> 1. 她已经开始规律上英语课，坚持和 Jaimie 英文对话，开始聊菜谱。
+> 2. 她开始备考雅思，以考代练。
+
 妻子开始承担教会财务的工作。我要克制，不要插嘴。
 
 **给沐沐学习更多的自主权**，允许他犯错，低效，磨叽，绕弯路，非最优解。他若不需要帮助，我不要好为人师。他若寻求帮助，就给他提供最好的资源和支持。要沉得住气，一口气憋两年也要沉住气。
 
-**一言九鼎，不给沐沐加作业**，他做完作业就可以玩，早做完早玩。这样他不磨叽，我也不用唠叨。
+> Nov 13, 2023:
+>
+> 这一年基本以鼓励和支持为主，放弃 Micro-management 以及监控式指导做作业。
+
+**一言九鼎，不给沐沐加作业**，他做完作业就可以玩，早做完早玩。这样他不磨叽，我也不用唠叨。✅
 
 **维护家庭爱的氛围**，营造彼此相爱的氛围可能需要一个月，毁了它只需要几分钟。说话态度，口气，音调，都需注意。
+
+> Nov 13, 2023:
+>
+> 妻子今年改变很大，她是我们家情绪的压舱石，她在家庭氛围的调节上功不可没，我基本没做什么贡献。
 
 #### 工作和学习
 
 工作要对别人有益处。为客户创造价值，为社会创造价值。
 
-1. **做好集成**
+1. **做好集成** ✅
 
 2. **解决集成的 Resilience 的问题**
 
@@ -42,7 +55,7 @@ tags:
 
    目前的工作环境，暂时应该用不到 K8s，但是善始善终，还是把它学完吧，并且通过 K8s 的两个考试。
 
-   - [CKAD](https://www.cncf.io/certification/ckad/)
+   - [CKAD](https://www.cncf.io/certification/ckad/) ✅
    - [CKA](https://www.cncf.io/certification/cka/)
 
 ---
