--- a/_posts/2023-11-13-plan-for-2024.md
+++ b/_posts/2023-11-13-plan-for-2024.md
@@ -8,6 +8,7 @@ tags:
 ---
 
 
+
 ## 家庭
 
 第一，办理上海户口。上海的“移民政策”又放宽了，办理上海户口的手续又进一步精简，不用回杭州去办理各种证明材料了。再拖三年，估计需要的材料越少。
@@ -28,10 +29,20 @@ tags:
 
 ## 工作
 
-我被调到一个新的组，开始做 Authentication，Authorization，Profile Service 等基础设施为其他业务部门铺路。
+我被调到一个新的组，开始做 Authentication，Authorization，Profile Service 等基础设施为其他业务部门铺路。我又可以和最喜欢的老板 Vincent 一起工作了。
 
-组内的成员都没有设计大型 SaaS 基础设施的经验和架构能力，一起摸着石头过河。整个项目面对的风险很大，但必须成功，硬啃。但是值得庆幸的是，我又可以和最喜欢的老板 Vincent 一起工作了。
+但组员(包括我)都没有设计大型 SaaS 基础设施的经验和架构能力，一起摸着石头过河，整个项目面对的风险很大。我需要认清的几个事实：
 
+- 我一直在期待一个技术领袖，既对 HRIS 业务有深刻理解，又技术精湛。以我们公司在北美开出的薪资范围，是不可能承担得起的，不要心存幻想了。
+
+- 既然没有领路人，那就成长为领路人，我要有成为总架构师的雄心壮志。人的成长需要在职场去历练，。古代历史长河中，不乏雄心壮志之人，但政治幼稚，如李白。有些人文采和政治素养兼备，比如高适。幼稚和老练，不是个性使然，而是有没有经历过生产环境（production）的锤炼。
+
+- 其次从公司的角度看问题，他并不在乎各个团队的角力和细节的实施，他只在乎项目最终结果。停止互相贬低，润滑团队关系，强化合作，才是正轨。
+
+
+## TBD 
+
+带全家人去日本兜一圈
 
 
 ## 历史回顾
