--- a/_posts/2023-01-03-plan-for-2023.md
+++ b/_posts/2023-01-03-plan-for-2023.md
@@ -55,7 +55,14 @@ tags:
    目前的工作环境，暂时应该用不到 K8s，但是善始善终，还是把它学完吧，并且通过 K8s 的两个考试。
 
    - [CKAD](https://www.cncf.io/certification/ckad/) ✅
-   - [CKA](https://www.cncf.io/certification/cka/)
+   - [CKA](https://www.cncf.io/certification/cka/) ✅
+
+
+
+![](/media/files/2023/2023-11-19-CKA.png)
+
+![](/media/files/2023/2023-11-19-CKAD.jpeg)
+
 
 ---
 
