--- a/_posts/2023-11-13-plan-for-2024.md
+++ b/_posts/2023-11-13-plan-for-2024.md
@@ -7,17 +7,13 @@ tags:
   -
 ---
 
-
-
 ## 家庭
 
-第一，办理上海户口。上海的“移民政策”又放宽了，办理上海户口的手续又进一步精简，不用回杭州去办理各种证明材料了。再拖三年，估计需要的材料越少。
-
+第一，上海的“移民政策”又放宽了，办理上海户口的手续又进一步精简，不用回杭州去办理各种证明材料了。可以把上海户口办好，不要再拖了。
 
 第二，陪妻子学雅思，一起考雅思，以考代练。万一有出国的需要，不用慌忙筹备。
 
-
-第三，给全家人刷签证，读万卷书，行万里路，为沐沐的夏校(Summer School)作准备。
+第三，读万卷书，行万里路。给全家人刷签证，为沐沐的夏校(Summer School)作准备。
 
 - 全家人的加拿大签证
 - 妻子和孩子的美国签证。
@@ -26,28 +22,56 @@ tags:
 
 第四，看看北美肌电图技师需要的技能和证书。
 
+第五，沐沐在学习打篮球，我也跟着学。小的时候家里穷，没机会学习打篮球，现在我也弥补一下童年的遗憾。
+
+第六，沐沐阅读文字有困难。我发现圣经是极佳的阅读材料。因为圣经每一句都有编号，沐沐失去焦点时，我可以非常方便的让他重新聚焦。我们晚上读圣经，我读三段，他读一段，沐沐很享受这种占爸爸便宜的感觉。
+
 
 ## 工作
 
-我被调到一个新的组，开始做 Authentication，Authorization，Profile Service 等基础设施为其他业务部门铺路。我又可以和最喜欢的老板 Vincent 一起工作了。
+第一，我被调到一个新的组，开始做 Auth, Authz, Profile, SSO 等基础设施。我没有经验，要学的东西一大堆。
 
-但组员(包括我)都没有设计大型 SaaS 基础设施的经验和架构能力，一起摸着石头过河，整个项目面对的风险很大。我需要认清的几个事实：
+- Auth0
+- Auth 2.0 & OIDC
+- Single Sign On
+- TypeScript / Node.js
+- DynamoDB
 
-- 我一直在期待一个技术领袖，既对 HRIS 业务有深刻理解，又技术精湛。以我们公司在北美开出的薪资范围，是不可能承担得起的，不要心存幻想了。
+在团队内，我可以做什么？
 
-- 既然没有领路人，那就成长为领路人，我要有成为总架构师的雄心壮志。人的成长需要在职场去历练，。古代历史长河中，不乏雄心壮志之人，但政治幼稚，如李白。有些人文采和政治素养兼备，比如高适。幼稚和老练，不是个性使然，而是有没有经历过生产环境（production）的锤炼。
+- 方方面面都不熟悉，先把小事做好，积攒信用，再发表意见和观点。
+- 我不是主要负责人，时间会非常充裕，可以在团队的外围多做一些探索性的工作。
+- 在半年的时间内，成长为 NodeJS 娴熟工和 DynamoDB 专家。
 
-- 其次从公司的角度看问题，他并不在乎各个团队的角力和细节的实施，他只在乎项目最终结果。停止互相贬低，润滑团队关系，强化合作，才是正轨。
+
+我是极其骄傲的人，争强好胜，自尊心又强，经常产生无谓的争竞，浪费自己和团队的时间。以后无论去哪一家公司，哪一个组，都要养成低调的习惯。无论喜欢还是反对，先肯定核心人员的付出和已有的成绩，培养融洽的同事关系，降低别人的排斥感，方便后期开展工作。
 
 
-## TBD 
+第二，强制分配 10% 的时间在沟通上。
+
+- 多了解客户
+- 和产品经理有一个 Bi-weekly 的 1:1
+- 每个月和每个组的 Tech Lead 要有一次 1:1，收集他们的实际需求，永远不脱离一线。
+
+
+第二，强制自己分配 20% 时间组织 “中国地区学习俱乐部”。
+
+在我既往工作过的公司，我始终有热情去分享。应该更进一步，成为一个好的组织者，让别人也有热情去分享，分享有用的知识。
+
+受限于精力和时间，再优秀的程序员能做的事情也有限。如果形成一个机制，让团队内的所有优秀程序员分享自己的知识，将会显著提升整个组织的效率。
+
+- 老程序员闪闪发光，增加了在整个公司的影响力。
+- 年轻的程序员可以快速成长。
+- 每个小团队之间，可以快速汲取别人的经验教训，不用从头做起。
+
+
+## TBD
 
 带全家人去日本兜一圈
 
-
 ## 历史回顾
 
-- [2023计划](/plan-for-2023.html)
+- [2023 计划](/plan-for-2023.html)
 - [2023-2028 五年计划](/five-year-plans-2023.html)
 - [2022 计划](/2022-07-08-plan-for-the-Q3-and-Q4-of-2022.html)
 - [2020 计划](/plan-for-2020.html)
@@ -56,5 +80,3 @@ tags:
 - [2016 计划](/study-plan-2016.html)
 - [2015 计划](/my-2014.html)
 - [2013 和 2014 计划](/study-plan.html)
-
-
