--- a/_posts/2023-11-13-plan-for-2024.md
+++ b/_posts/2023-11-13-plan-for-2024.md
@@ -7,6 +7,11 @@ tags:
   -
 ---
 
+## Health
+
+学习拳击。稍微入门之后，就可以防守和进攻 80% 的人群，可以在紧急关头保护自己的孩子，或者被人侮辱的时候还击，不用憋坏自己导致心理疾病。
+
+
 ## 家庭
 
 第一，上海的“移民政策”又放宽了，办理上海户口的手续又进一步精简，不用回杭州去办理各种证明材料了。可以把上海户口办好，不要再拖了。
@@ -25,6 +30,12 @@ tags:
 第五，沐沐在学习打篮球，我也跟着学。小的时候家里穷，没机会学习打篮球，现在我也弥补一下童年的遗憾。
 
 第六，沐沐阅读文字有困难。我发现圣经是极佳的阅读材料。因为圣经每一句都有编号，沐沐失去焦点时，我可以非常方便的让他重新聚焦。我们晚上读圣经，我读三段，他读一段，沐沐很享受这种占爸爸便宜的感觉。
+
+
+第七，想办法带全家人去日本兜一圈
+
+
+第八，减少支出，增加储蓄，分散资产。一来是应对中国的经济风险，二来表达不满和反抗。
 
 
 ## 工作
@@ -64,10 +75,6 @@ tags:
 - 年轻的程序员可以快速成长。
 - 每个小团队之间，可以快速汲取别人的经验教训，不用从头做起。
 
-
-## TBD
-
-带全家人去日本兜一圈
 
 ## 历史回顾
 
