--- a/_posts/2023-11-13-plan-for-2024.md
+++ b/_posts/2023-11-13-plan-for-2024.md
@@ -1,5 +1,5 @@
 ---
-title: "2024 计划 [draft]"
+title: "2024 计划"
 layout: post
 guid: 2024plan
 date: 2023-11-13
@@ -16,18 +16,18 @@ tags:
 
 第一，上海的“移民政策”又放宽了，办理上海户口的手续又进一步精简，不用回杭州去办理各种证明材料了。可以把上海户口办好，不要再拖了。
 
-第二，陪妻子学雅思，一起考雅思，以考代练。万一有出国的需要，不用慌忙筹备。
+第二，陪妻子学雅思，一起考雅思，以考代练。万一有出国的需要，不用慌忙筹备。✅
 
 第三，读万卷书，行万里路。给全家人刷签证，为沐沐的夏校(Summer School)作准备。
 
-- 全家人的加拿大签证
+- 全家人的加拿大签证 ✅
 - 妻子和孩子的美国签证。
 - 日本 5 年签
 - 韩国 5 年签 (optional)
 
 第四，看看北美肌电图技师需要的技能和证书。
 
-第五，沐沐在学习打篮球，我也跟着学。小的时候家里穷，没机会学习打篮球，现在我也弥补一下童年的遗憾。
+第五，沐沐在学习打篮球，我也跟着学。小的时候家里穷，没机会学习打篮球，现在我也弥补一下童年的遗憾。✅
 
 第六，沐沐阅读文字有困难。我发现圣经是极佳的阅读材料。因为圣经每一句都有编号，沐沐失去焦点时，我可以非常方便的让他重新聚焦。我们晚上读圣经，我读三段，他读一段，沐沐很享受这种占爸爸便宜的感觉。
 
@@ -35,7 +35,7 @@ tags:
 第七，想办法带全家人去日本兜一圈
 
 
-第八，减少支出，增加储蓄，分散资产。一来是应对中国的经济风险，二来表达不满和反抗。
+第八，减少支出，增加储蓄，分散资产。一来是应对中国的经济风险，二来表达不满和反抗。✅
 
 
 ## 工作
@@ -65,7 +65,7 @@ tags:
 - 每个月和每个组的 Tech Lead 要有一次 1:1，收集他们的实际需求，永远不脱离一线。
 
 
-第二，强制自己分配 20% 时间组织 “中国地区学习俱乐部”。
+第三，强制自己分配 20% 时间组织 “中国地区学习俱乐部”。
 
 在我既往工作过的公司，我始终有热情去分享。应该更进一步，成为一个好的组织者，让别人也有热情去分享，分享有用的知识。
 
@@ -75,6 +75,84 @@ tags:
 - 年轻的程序员可以快速成长。
 - 每个小团队之间，可以快速汲取别人的经验教训，不用从头做起。
 
+
+第四，放弃 Istio 的学习。
+
+Istio 带来的收益和它的复杂度比起来，不成正比，没有必要在 Workstream 过多和过早的的引入复杂度。
+
+
+第五，开始涉猎人工智能相关的知识。
+
+
+
+## 2011-2023 年沉淀下来的习惯
+
+在对自己的观察中我发现了一个有趣的事：当生活的场景或地点发生变化时，稳定的行为模式会被打断，很难恢复，即使恢复也不完整。
+
+为了对抗家族遗传性的高血脂，我一直低脂低盐饮食，过年 7 天假期我允许自己短暂的放纵，但是假期结束后我却忘记了低脂饮食的习惯。本来我每天坚持跑步 5km，得了新冠后，浑身乏力，无法运动。一个月后身体彻底康复，身体变得懒惰，不再愿意跑步。
+
+旅游，过年，出差，让生活充满了新意，但也打断了循规蹈矩的生活，每次打断我都把自己弄丢了。这个文档快速帮自己找回自己，找回那个我所喜爱的循规蹈矩的自己。
+
+#### 信仰习惯
+
+| 原则                                                       | 打破原则的直接后果 (3-5 年) | 打破原则的凄惨结局 (60 岁) |
+| :--------------------------------------------------------- | :-------------------------- | :------------------------- |
+| 常常默想死亡 "假如生命只剩2年，该做什么"                  | 沉迷物质享受和虚浮的事物    | 没有反省的人生不值得活     |
+| 写日记                                                     |                             |                            |
+| 三选一。全家人一起早晨听圣经；晚上一起敬拜；晚上一起祷告。 |                             | 全家偏离信仰               |
+
+#### 健康习惯
+
+| 原则                                     | 打破原则的直接后果 (3-5 年)                                  | 打破原则的凄惨结局 (60 岁)         |
+| :--------------------------------------- | :----------------------------------------------------------- | :--------------------------------- |
+| 能早起就早起，不能早起别勉强             |                                                              |                                    |
+| 每天早晨喝一大杯水                       | 肾结晶加重，变为结石                                         |
+| 打喷嚏时头后仰，保护颈椎。               | 颈椎病发作                                                   |
+| 中午 14:00 之后不要喝咖啡                | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠              | 记忆力下降，无法编程               |
+| 左右手交替使用鼠标，一月一换             | 右侧手肘疼痛                                                 |                                    |
+| 左右交替使用磨牙进食，一月一换           | 单侧磨牙磨损，疼痛                                           |                                    |
+| 不喝酒                                   | 前列腺不舒服 / 胃食管反流                                    | 老年后起夜增多，睡不好，折腾死自己 |
+| 站立开会                                 | 久坐导致前列腺肥大                                           | 老年后起夜增多，睡不好，折腾死自己 |
+| 工作 45 分钟，锻炼 15 分钟             | 久坐导致前列腺肥大                                           | 老年后起夜增多，睡不好，折腾死自己 |
+| 不吃豆腐乳                               | 拉屎不痛快                                                   |                                    |
+| 吃饭慢嚼细咽                             | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。 |                                    |
+| 拉屎不看手机                             | 痔疮发作 / 颈椎病发作                                        |                                    |
+| 不吃香肠                                 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心                    | 脑梗/心梗，成为家庭的累赘          |
+| 每天晚上跑步 5 km                        | 肥胖/脂肪肝                                                  | 脑梗/心梗，成为家庭的累赘          |
+| 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间                                                 | 偏离信仰，下地狱                   |
+|                                          |                                                              |                                    |
+
+工作间隙锻炼方式有：
+
+- 半跪俯卧撑
+- 引体向上
+- 卷腹
+- 无负重下蹲 squat
+- 提肛 20 个
+- 收下巴锻炼颈椎
+- 臀桥
+
+#### 家庭习惯
+
+- 时时刻刻维护家里爱的氛围，说话态度，口气，都需操练。爱能遮盖很多的矛盾。（女人感受不到爱，就会拆台，这是我过去几年忽视的一个变量。）
+- always hope. 多鼓励家人的闪光点，少打击家人的缺点。
+- 每个季度回一趟老家，看望爸爸妈妈爷爷奶奶
+- 中午独自吃饭时，和奶奶聊聊天
+- 每周给我爸妈打个电话
+- 多储蓄
+- 不需要的东西，一分钱都不要花。打折省 20%，不买省 100%。
+- 不要高估钱财的作用，它并不可靠。战争/屠杀/文革随时有可能发生，没有绝对安全。
+- 家中富足睡不安稳，不如穷乏却睡的香甜。
+
+#### 学习习惯
+
+- 下午四点没事的话，背单词，复习 Anki 中的卡片。
+
+
+#### 教会习惯
+
+- 即使知道大部分人都是虎头蛇尾，即使自己是个悲观者，也要多鼓励，少挖苦。你如何鼓励自己的儿子，在教会里也要如此鼓励别人。
+- 人都是刺猬，爱彼此越深，伤害越深，不要因为伤害就对关系失望和退缩。
 
 ## 历史回顾
 
