--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -6,25 +6,22 @@ date: 2024-10-01
 tags:
 ---
 
-
 # 2024 复盘
 
 2024 一整年，身体都很差。
 
-2024年3月份得了百日咳，每天咳的腹肌痉挛，夜晚无法睡觉，持续了2个月的时间。康复后气道很敏感，身体乏力，走路有气无力，只到9月份才有所恢复。
+2024 年 3 月份得了百日咳，每天咳的腹肌痉挛，夜晚无法睡觉，持续了 2 个月的时间。康复后气道很敏感，身体乏力，走路有气无力，只到 9 月份才有所恢复。
 
-上半年加拿大的首席架构师的辩论，引发了中国和加拿大的博弈之中，压力重重。我经常失眠，不规律耳鸣，有时会突发心动过速。2024年5月份在和同事开会时，突发心动过速，后脑勺像失去了知觉，突然来临的濒死感让我惊慌失措。匆匆茫茫给妻子打电话，在医院急诊室里上全套心电监护。儿子哭的像个泪人，我心里非常自责和后悔。
+上半年加拿大的首席架构师的辩论，引发了中国和加拿大的博弈之中，压力重重。我经常失眠，不规律耳鸣，有时会突发心动过速。2024 年 5 月份在和同事开会时，突发心动过速，后脑勺像失去了知觉，突然来临的濒死感让我惊慌失措。匆匆茫茫给妻子打电话，在医院急诊室里上全套心电监护。儿子哭的像个泪人，我心里非常自责和后悔。
 
 刚者易折，柔者长存，以后要采取一种细水长流的工作策略。这只是一份工作而已，我没有必要把自己的健康搭进去。
 
-# 2025  核心目标，康复！
+# 2025 核心目标，康复！
 
 - 跑步体能恢复到 8 km
-- 力量训练能恢复到  __ KG (TBD)
-
+- 力量训练能恢复到 \_\_ KG (TBD)
 
 # 2025 细化行动
-
 
 ## 信仰
 
@@ -44,25 +41,25 @@ tags:
 
 健康习惯
 
-| 原则                      | 打破原则的直接后果 (3-5 年)              | 打破原则的凄惨结局 (60 岁)  |
-| :---------------------- | :----------------------------- | :---------------- |
-| 能早起就早起，不能早起别勉强          |                                |                   |
-| 每天早晨喝一大杯水               | 肾结晶加重，变为结石                     |                   |
-| 打喷嚏时头后仰，保护颈椎。           | 颈椎病发作                          |                   |
-| 不要喝咖啡和茶                 | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠      | 记忆力下降，无法编程        |
-| 左右手交替使用鼠标，一月一换          | 右侧手肘疼痛                         |                   |
-| 左右交替使用磨牙进食，一月一换         | 单侧磨牙磨损，疼痛                      |                   |
-| 不喝酒                     | 前列腺不舒服 / 胃食管反流。<br>            | 老年后起夜增多，睡不好，折腾死自己 |
-| 不喝酒                     | 尿酸代谢异常，喝酒会导致痛风急性发作，大关节非对称性疼痛   | 痛风                |
-| 站立开会                    | 久坐导致前列腺肥大                      | 老年后起夜增多，睡不好，折腾死自己 |
-| 工作 45 分钟，锻炼 15 分钟       | 久坐导致前列腺肥大                      | 老年后起夜增多，睡不好，折腾死自己 |
-| 不吃豆腐乳                   | 拉屎不痛快                          |                   |
-| 吃饭慢嚼细咽                  | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。 |                   |
-| 拉屎不看手机                  | 痔疮发作 / 颈椎病发作                   |                   |
-| 不吃香肠                    | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心         | 脑梗/心梗，成为家庭的累赘     |
-| 每天晚上跑步 2 km             | 肥胖/脂肪肝                         | 脑梗/心梗，成为家庭的累赘     |
-| 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间                         | 偏离信仰，下地狱          |
-|                         |                                |                   |
+| 原则                                     | 打破原则的直接后果 (3-5 年)                                    | 打破原则的凄惨结局 (60 岁)         |
+| :--------------------------------------- | :------------------------------------------------------------- | :--------------------------------- |
+| 能早起就早起，不能早起别勉强             |                                                                |                                    |
+| 每天早晨喝一大杯水                       | 肾结晶加重，变为结石                                           |                                    |
+| 打喷嚏时头后仰，保护颈椎。               | 颈椎病发作                                                     |                                    |
+| 不要喝咖啡和茶                           | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠                | 记忆力下降，无法编程               |
+| 左右手交替使用鼠标，一月一换             | 右侧手肘疼痛                                                   |                                    |
+| 左右交替使用磨牙进食，一月一换           | 单侧磨牙磨损，疼痛                                             |                                    |
+| 不喝酒                                   | 前列腺不舒服 / 胃食管反流。<br>                                | 老年后起夜增多，睡不好，折腾死自己 |
+| 不喝酒 / 果汁 / 可乐                     | 嘌呤代谢异常，尿酸在关节沉积，痛风急性发作，大关节非对称性疼痛 | 痛风                               |
+| 站立开会                                 | 久坐导致前列腺肥大                                             | 老年后起夜增多，睡不好，折腾死自己 |
+| 工作 45 分钟，锻炼 15 分钟               | 久坐导致前列腺肥大                                             | 老年后起夜增多，睡不好，折腾死自己 |
+| 不吃豆腐乳                               | 拉屎不痛快                                                     |                                    |
+| 吃饭慢嚼细咽                             | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。   |                                    |
+| 拉屎不看手机                             | 痔疮发作 / 颈椎病发作                                          |                                    |
+| 不吃香肠                                 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心                      | 脑梗/心梗，成为家庭的累赘          |
+| 每天晚上跑步 2 km                        | 肥胖/脂肪肝                                                    | 脑梗/心梗，成为家庭的累赘          |
+| 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间                                                   | 偏离信仰，下地狱                   |
+|                                          |                                                                |                                    |
 
 工作间隙锻炼方式有：
 
