--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -44,13 +44,13 @@ tags:
 | 原则                                     | 打破原则的直接后果 (3-5 年)                                    | 打破原则的凄惨结局 (60 岁)         |
 | :--------------------------------------- | :------------------------------------------------------------- | :--------------------------------- |
 | 能早起就早起，不能早起别勉强             |                                                                |                                    |
-| 每天早晨喝一大杯水                       | 肾结晶加重，变为结石                                           |                                    |
 | 打喷嚏时头后仰，保护颈椎。               | 颈椎病发作                                                     |                                    |
 | 不要喝咖啡和茶                           | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠                | 记忆力下降，无法编程               |
 | 左右手交替使用鼠标，一月一换             | 右侧手肘疼痛                                                   |                                    |
 | 左右交替使用磨牙进食，一月一换           | 单侧磨牙磨损，疼痛                                             |                                    |
 | 不喝酒                                   | 前列腺不舒服 / 胃食管反流。<br>                                | 老年后起夜增多，睡不好，折腾死自己 |
 | 不喝酒 / 果汁 / 可乐                     | 嘌呤代谢异常，尿酸在关节沉积，痛风急性发作，大关节非对称性疼痛 | 痛风                               |
+| 每天至少喝 2L 水                         | 1. 高尿酸。 2. 肾结晶加重，变为结石                            |                                    |
 | 站立开会                                 | 久坐导致前列腺肥大                                             | 老年后起夜增多，睡不好，折腾死自己 |
 | 工作 45 分钟，锻炼 15 分钟               | 久坐导致前列腺肥大                                             | 老年后起夜增多，睡不好，折腾死自己 |
 | 不吃豆腐乳                               | 拉屎不痛快                                                     |                                    |
