--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -115,3 +115,15 @@ tags:
 细水长流，要工作到 75 岁。
 
 对本职工作保持合宜的态度，不狂热，也不要滥竽充数。
+
+
+
+
+# 事故复盘
+
+
+### 高尿酸事故
+
+2024-10-15 接待北美的同事 Austin，喝了几杯，事后浑身大关节疼痛。去医院复查后，尿酸升高，甘油三酯高。
+
+![](/media/files/2025/2024-10-21.jpg)
