--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -8,8 +8,9 @@ tags:
 
 # 核心目标：康复！
 
-- 跑步体能恢复到 8 km
-- 力量训练能恢复到 \_\_ KG (TBD)
+- 跑步能恢复到 8 km/次
+- 体重恢复到 63 kg
+- 力量训练能恢复 (TBD)
 
 # 2025 细化行动
 
@@ -69,11 +70,14 @@ tags:
 - 如何应试
 - ...
 
-**办理上海户口**
+### 办理上海户口 (in progress)
 
-**接爸爸来上海过新年 (TBD)**
+- 2024-11-06 已经提交材料
 
-**家庭习惯**
+### 接爸爸来上海过新年 (TBD)
+
+
+### 家庭习惯
 
 - 时时刻刻维护家里爱的氛围，说话态度，口气，都需操练。爱能遮盖很多的矛盾。（女人感受不到爱，就会拆台，这是我过去几年忽视的一个变量。）
 - always hope. 多鼓励家人的闪光点，少打击家人的缺点。
@@ -99,6 +103,7 @@ tags:
 **学习 clerk.com**
 
 **学习 NestJS**
+
 
 ## 工作
 
