--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -28,6 +28,7 @@ tags:
 
 恢复力量训练。
 
+
 和沐沐一起学习乒乓球 / 和沐沐一起学习拳击 (TBD)
 
 健康习惯
@@ -39,18 +40,23 @@ tags:
 | 不要喝咖啡和茶                           | 睡的很浅，凌晨 4 点就会醒。更严重的话，彻夜失眠                | 记忆力下降，无法编程               |
 | 左右手交替使用鼠标，一月一换             | 右侧手肘疼痛                                                   |                                    |
 | 左右交替使用磨牙进食，一月一换           | 单侧磨牙磨损，疼痛                                             |                                    |
-| 不喝酒                                   | 前列腺不舒服 / 胃食管反流。<br>                                | 老年后起夜增多，睡不好，折腾死自己 |
-| 不喝酒 / 果汁 / 可乐                     | 嘌呤代谢异常，尿酸在关节沉积，痛风急性发作，大关节非对称性疼痛 | 痛风                               |
+| 不喝 酒                                | 前列腺不舒服 / 胃食管反流。<br>                                | 老年后起夜增多，睡不好，折腾死自己 |
+| 不喝 酒 / 果汁 / 可乐                    | 嘌呤代谢异常，尿酸在关节沉积，痛风急性发作，大关节非对称性疼痛 | 痛风                               |
 | 每天至少喝 2L 水                         | 1. 高尿酸。 2. 肾结晶加重，变为结石                            |                                    |
 | 站立开会                                 | 久坐导致前列腺肥大                                             | 老年后起夜增多，睡不好，折腾死自己 |
 | 工作 45 分钟，锻炼 15 分钟               | 久坐导致前列腺肥大                                             | 老年后起夜增多，睡不好，折腾死自己 |
 | 不吃豆腐乳                               | 拉屎不痛快                                                     |                                    |
-| 吃饭慢嚼细咽                             | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。   |                                    |
+| 不吃八宝咸菜                           | 打嗝，难消化，半天的时间胃都难以消化，一股咸菜味 |                                    |
+| 吃饭细嚼慢咽                             | 吃饭速度对胃食管反流影响非常大，是决定性因素，然后继发咽炎。   | 
+| 不吃过热食物(媳妇做好饭后，我可以磨叽10分钟再吃饭)  | 烫伤食道，诱发胃食管反流。   |                                    |
+| 不要吃辣椒 / 剁椒鱼头 /  辣椒酱            | 我有[胃心综合征](https://zh.wikipedia.org/wiki/%E8%83%83%E5%BF%83%E7%BB%BC%E5%90%88%E5%BE%81)和胃食管反流，胃病发作时会导致心前区不适，头晕，焦虑，濒死感   |                                    |
+| 不要暴饮暴食，8分饱就可以                | 我有胃心综合征和胃食管反流，胃病发作时会导致心前区不适，头晕，焦虑，濒死感  |                                    |
 | 拉屎不看手机                             | 痔疮发作 / 颈椎病发作                                          |                                    |
 | 不吃香肠                                 | 肥胖/脂肪肝/家族遗传高血脂/胃食管反流烧心                      | 脑梗/心梗，成为家庭的累赘          |
 | 每天晚上跑步 2 km                        | 肥胖/脂肪肝                                                    | 脑梗/心梗，成为家庭的累赘          |
 | 21:30 躺在床上，读书，讲故事，敬拜，闲聊 | 没有敬拜时间                                                   | 偏离信仰，下地狱                   |
 |                                          |                                                                |                                    |
+
 
 工作间隙锻炼方式有：
 
