update new year goal

--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -8,9 +8,21 @@ tags:
 
 # 核心目标：康复！
 
+**体脂率从 30% 降低到 20 %**
+  
 - 跑步能恢复到 8 km/次
 - 体重恢复到 63 kg
-- 力量训练能恢复 (TBD)
+- 卧推 35 kg
+
+
+**Eat clean**
+
+- 不吃油炸食物 / 鸡皮 
+- 戒掉咖啡 ✅
+- 戒掉果汁 ✅
+- 戒掉可乐 ✅
+- 戒掉辣椒，谁发现我吃我最爱的辣椒酱，剁椒鱼头，辣椒炒肉，当场奖励 500美金。
+
 
 # 2025 细化行动
 
