--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -8,13 +8,15 @@ tags:
 
 # 核心目标：康复！
 
-- 跑步能恢复到 8 km/次
+- 前提: 不要受伤 (2025年6月新增)
+- ~~跑步能恢复到 8 km/次~~ 每周跑步5次，每次30分钟，每次 3公里。
+- 力量训练能恢复 ~~(TBD)~~ (一定要做，而不是可选项)
 - 体重恢复到 63 kg
-- 力量训练能恢复 (TBD)
+
 
 # 2025 细化行动
 
-## 信仰
+## 1 信仰
 
 | 原则                                                       | 打破原则的直接后果 (3-5 年) | 打破原则的凄惨结局 (60 岁) |
 | :--------------------------------------------------------- | :-------------------------- | :------------------------- |
@@ -22,16 +24,78 @@ tags:
 | 写日记                                                     |                             |                            |
 | 常常默想死亡 "假如生命只剩 2 年，该做什么"                 | 沉迷物质享受和虚浮的事物    | 没有反省的人生不值得活     |
 
-## Health
-
-每天晚上跑步 2 公里或者去健身房锻炼。
-
-恢复力量训练。
-
-和沐沐一起学习乒乓球 / 和沐沐一起学习拳击 (TBD)
+##  2 Health
 
 
-健康习惯
+### 2.1 ~~每天晚上跑步 3 公里~~ 每周150分钟的有氧锻炼 (2025年6月调整)。
+
+身体的测试数据：
+
+- 如果每天跑3公里，膝盖不痛，每天都可以跑。
+- 如果跑5公里，膝盖痛，需要休息 2 天。
+
+有数据显示，每周运动150分钟 (每天30分钟 x 5天)，可以降低成年人全因死亡率 
+
+### 2.2 去健身房锻炼，恢复力量训练，提高肌肉量。
+
+
+
+### 2.3 降低心梗的死亡风险。(2025年6月新增)
+
+老年之后，我大概率会死于心梗。因为我身上不可控的高危因素实在是太多了:
+
+- 我的妈妈60岁死于糖尿病和心梗
+- 我的表哥不到40岁时冠脉狭窄，病进行了冠脉搭桥手术。
+-  我的脂蛋白(a) 达到 1200 mg/L 左右，远高于正常值的 300 mg/L，更要命的是脂蛋白(a) 是受遗传因素的影响，通过饮食和运动无法改善。
+
+
+我身上的可控危险因素
+
+1. 高甘油三酯 (TG) 4.95 mmol/L
+2. 低密度脂蛋白胆固醇 (LDL-C) 3.19 mmol/L
+
+#### 2.3.1  控制低密度脂蛋白胆固醇 (LDL-C)  (2025年6月新增)
+
+Before: 3.19 mmol/L
+
+干预: 每月注射一次瑞百安。
+
+After: 2.53 mmol/L (正常值 3.4 )
+
+Expectation:，属于高风险信号。，我的表哥40岁时心梗后动脉搭桥。
+
+#### 2.3.2 控制血甘油三酯 TG  (2025年6月新增)
+
+Before: 4.95 mmol/L
+
+干预:
+- 高浓度 EPA 2g/天，降低 30% 的血液甘油三酯
+- 非诺贝特，qd
+
+After: 1.03 mmol/L (正常值 <1.70)
+
+#### 2.3.3 控制载脂蛋白a  Lp(a)  (2025年6月新增)
+
+目前无药可治，[四种新药](https://www.health.harvard.edu/heart-health/lipoproteina-an-update-on-testing-and-treatment)正在研发之中。
+
+我注射瑞百安可以顺便降低 30% 的载脂蛋白a，可以暂时挡一挡。
+
+
+###  2.4 控制压力  (2025年6月新增)
+
+- 官大一级压死人，无能的架构师脱离业务，沉湎于天马行空的想象中，油盐不进。
+- 职业经理人扩充自己的人手，占山为王。尽管折腾了半年，毫无产出，但是但是他们总能发挥他们语言的艺术，把自己做的狗屎夸成黄金。他们好可怜，为了自己的绩效，钱以及简历，可以违背自己的良心粉饰自己的拙劣的“成就”。
+
+方向错了，写代码不再是一件享受，而变成了无意义的堆砌。我很努力的划桨，但是船还是在原地不动。我的睡眠很差，心动过速，猜测可能与肾上腺素以及皮质醇有关。
+
+行动:
+
+既然管理不了自己的压力，那么就让压力消失吧，人并非没有选择。我辞职了，没必要为了工作牺牲时间和健康。
+
+### ~~2.5  和沐沐一起学习乒乓球 / 和沐沐一起学习拳击 (TBD)~~  (2025年6月删除)
+
+
+### 2.6 健康习惯
 
 | 原则                                     | 打破原则的直接后果 (3-5 年)                                    | 打破原则的凄惨结局 (60 岁)         |
 | :--------------------------------------- | :------------------------------------------------------------- | :--------------------------------- |
@@ -63,21 +127,26 @@ tags:
 - 收下巴锻炼颈椎
 - 臀桥
 
-## 家庭
+## 3 家庭
 
-**战略性的思考和复盘沐沐的教育**
+### 3.1 战略性的思考和复盘沐沐的教育
 
 - 熟悉 9 年义务教育考试大纲
 - 如何应试
 - ...
 
-### 办理上海户口 ✅
+### 3.2 帮沐沐一起功课阅读障碍的问题 (2025年6月份新增事项)
 
-- 2024-11-06 已经提交材料
-- 2025-01-01 办好
+沐沐在语文上遇到的困难，实际是因为阅读障碍导致的。发展型阅读障碍在儿童中的发病率 5%-7%。
 
 
-### 家庭习惯
+### 3.3 办理上海户口 ✅
+
+- 2024-11-06 已经提交材料 ✅
+- 2025-01-01 办好 ✅
+
+
+### 3.4 家庭习惯
 
 - 时时刻刻维护家里爱的氛围，说话态度，口气，都需操练。爱能遮盖很多的矛盾。（女人感受不到爱，就会拆台，这是我过去几年忽视的一个变量。）
 - always hope. 多鼓励家人的闪光点，少打击家人的缺点。
@@ -90,11 +159,15 @@ tags:
 - 家中富足睡不安稳，不如穷乏却睡的香甜。
 
 
-## 学习
+## 4 学习
 
 **学习 Golang**
 
-**学习 NestJS**
+在新的项目组学了6个月的 Golang。
+
+**学习 Python (2025年6月新增)**
+
+~~**学习 NestJS**~~
 
 **学习前端**
 
@@ -108,12 +181,14 @@ tags:
 **学习 clerk.com**
 
 
-## 工作
+## 5 工作
 
-细水长流，要工作到 75 岁。
+细水长流，要工作到 75 岁。对本职工作保持合宜的态度，不狂热，也不要滥竽充数。
 
-对本职工作保持合宜的态度，不狂热，也不要滥竽充数。
 
+### 5.1 我辞职了 
+
+感觉还挺棒的。
 
 
 # 事故复盘
