--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -153,8 +153,9 @@ After: 1.03 mmol/L (正常值 <1.70)
 
 ### 3.2 帮沐沐一起功课阅读障碍的问题 (2025年6月份新增事项)
 
-沐沐在语文上遇到的困难，实际是因为阅读障碍导致的。发展型阅读障碍在儿童中的发病率 5%-7%。
+沐沐在语文上遇到的困难，可能是阅读障碍导致。发展型阅读障碍在儿童中的发病率 5%-7%。
 
+2025-06-24: 带沐沐去复旦大学附属儿科医院做了量表检查，确诊为中度阅读障碍。尘埃落定，所有过去的艰辛，泪水和委屈，都有了答案。这算是一个重要的里程碑，从此开始正规的干预治疗了。✅
 
 ### 3.3 办理上海户口 ✅
 
