--- a/_posts/2024-10-01-plan-for-2025.md
+++ b/_posts/2024-10-01-plan-for-2025.md
@@ -95,12 +95,12 @@ After: 1.03 mmol/L (正常值 <1.70)
 ###  2.4 控制压力  (2025年6月新增)
 
 - 架构师脱离业务沉湎于天马行空的想象中，油盐不进。人生是个flow，什么都可以用 flow 解决。
-- 职业经理人面向简历编程，占地盘，扩充自己的人手，使劲折腾 Microservice，对客户利益毫无产出，一线程序员怨声载道，哀声遍野。但是但是他们总能发挥他们语言的艺术，把自己做的狗屎架构夸成黄金。他们好可怜，为了自己的绩效，钱以及简历，可以违背自己的良心粉饰自己的拙劣的“成就”。遇事不觉 microservice，microservice 包治百病。
+- 职业经理人面向简历编程，占地盘，扩充自己的人手，使劲折腾 Microservice，对客户利益毫无产出，一线程序员怨声载道，哀声遍野。但是但是他们总能发挥他们语言的艺术，把自己做的复杂且无用的架构夸成黄金。他们好可怜，为了自己的绩效，钱以及简历，可以违背自己的良心粉饰自己的拙劣的“成就”。遇事不觉 microservice，microservice 包治百病。
 - 写代码变成了无意义的堆砌，今日写，明日拆。
 
-我不认同我的老板，我的工作没有意义。
+我的工作不再是帮客户解决问题，而是天天折腾复杂无用的架构，工作没有意义。
 
-曾几何时，我向创始人反馈公司重重问题，耗费心力，与同事关系也剑拔弩张，这种压力让我我的睡眠很差，心动过速，那种糟糕的体验，我不想再重演一次。这次我选择 let it go。我已经快40了，我不想在无用的人和事上浪费一分钟时间了。既然无法蚍蜉撼树，那么就走吧，人并非没有选择。
+曾几何时，我向创始人反馈公司重重问题，耗费心力，与同事关系也剑拔弩张，这种压力让我我的睡眠很差，心动过速，那种糟糕的体验，我不想再重演一次。这次我选择 let it go。我已经快40了，我不想在无用的人和事上浪费一分钟时间了。该做的都做了，既然无法改变，那么就走吧。
 
 ### ~~2.5  和沐沐一起学习乒乓球 / 和沐沐一起学习拳击 (TBD)~~  (2025年6月删除)
 
